{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 299,
  "lineage": "76940ebb-4293-7f78-a9e5-ea2ad73ae1e3",
  "resources": [
    {
      "module": "module.admin",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "admin_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.230.157.12",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-05-28T04:54:36.292-07:00",
            "description": "Static IP for admin VM",
            "id": "projects/uporto-cd/regions/europe-west2/addresses/uporto-cd-admin-ip",
            "name": "uporto-cd-admin-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "uporto-cd",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/regions/europe-west2/addresses/uporto-cd-admin-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/uporto-cd/zones/europe-west2-a/instances/uporto-cd-admin"
            ]
          }
        }
      ]
    },
    {
      "module": "module.admin",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "admin_webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/uporto-cd/zones/europe-west2-a/instanceGroups/uporto-cd-admin-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 60,
            "creation_timestamp": "2025-05-28T04:55:51.979-07:00",
            "description": "Backend service for admin webapp",
            "enable_cdn": false,
            "fingerprint": "WXYp184zIAc=",
            "generated_id": 5041043611330496296,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/healthChecks/uporto-cd-admin-webapp-health"
            ],
            "id": "projects/uporto-cd/global/backendServices/uporto-cd-admin-webapp-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "uporto-cd-admin-webapp-backend",
            "port_name": "http",
            "project": "uporto-cd",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/backendServices/uporto-cd-admin-webapp-backend",
            "session_affinity": "NONE",
            "timeout_sec": 60
          },
          "dependencies": [
            "module.admin.google_compute_address.admin_ip",
            "module.admin.google_compute_health_check.admin_webapp",
            "module.admin.google_compute_instance.admin",
            "module.admin.google_compute_instance_group.admin_group",
            "module.admin.google_compute_network.admin_vpc",
            "module.admin.google_compute_subnetwork.admin_subnet",
            "module.admin.google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "module": "module.admin",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "admin_allow_from_gke_masters",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443",
                  "10250"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-28T04:55:02.746-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/uporto-cd/global/firewalls/uporto-cd-admin-allow-gke-masters",
            "log_config": [],
            "name": "uporto-cd-admin-allow-gke-masters",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-admin-vpc",
            "priority": 1000,
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/firewalls/uporto-cd-admin-allow-gke-masters",
            "source_ranges": [
              "172.16.1.0/28",
              "172.16.2.0/28",
              "172.16.3.0/28"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "admin-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.admin.google_compute_network.admin_vpc",
            "module.admin.google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "module": "module.admin",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "admin_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "53"
                ],
                "protocol": "udp"
              },
              {
                "ports": [
                  "80",
                  "443",
                  "22",
                  "53"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-28T04:54:56.557-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/uporto-cd/global/firewalls/uporto-cd-admin-egress",
            "log_config": [],
            "name": "uporto-cd-admin-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-admin-vpc",
            "priority": 1000,
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/firewalls/uporto-cd-admin-egress",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "admin-vm",
              "admin-webapp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.admin.google_compute_network.admin_vpc",
            "module.admin.google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "module": "module.admin",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "admin_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-28T04:54:58.149-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/uporto-cd/global/firewalls/uporto-cd-admin-ssh",
            "log_config": [],
            "name": "uporto-cd-admin-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-admin-vpc",
            "priority": 1000,
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/firewalls/uporto-cd-admin-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "admin-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.admin.google_compute_network.admin_vpc",
            "module.admin.google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "module": "module.admin",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "admin_webapp_health",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-28T04:55:01.143-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/uporto-cd/global/firewalls/uporto-cd-admin-webapp-health",
            "log_config": [],
            "name": "uporto-cd-admin-webapp-health",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-admin-vpc",
            "priority": 500,
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/firewalls/uporto-cd-admin-webapp-health",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "admin-webapp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.admin.google_compute_network.admin_vpc",
            "module.admin.google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "module": "module.admin",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "admin_webapp_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-28T04:54:58.312-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/uporto-cd/global/firewalls/uporto-cd-admin-webapp-http",
            "log_config": [],
            "name": "uporto-cd-admin-webapp-http",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-admin-vpc",
            "priority": 1000,
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/firewalls/uporto-cd-admin-webapp-http",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "admin-webapp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.admin.google_compute_network.admin_vpc",
            "module.admin.google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "module": "module.admin",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "admin_webapp_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.49.118.53",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-05-28T04:54:32.298-07:00",
            "description": "Global IP for admin webapp",
            "id": "projects/uporto-cd/global/addresses/uporto-cd-admin-webapp-ip",
            "name": "uporto-cd-admin-webapp-ip",
            "prefix_length": 0,
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/addresses/uporto-cd-admin-webapp-ip"
          }
        }
      ]
    },
    {
      "module": "module.admin",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "admin_webapp_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/uporto-cd/global/forwardingRules/uporto-cd-admin-webapp-http-rule",
            "ip_address": "34.49.118.53",
            "ip_protocol": "TCP",
            "label_fingerprint": "jNmrVEXgJcU=",
            "labels": {
              "service": "admin-webapp"
            },
            "load_balancing_scheme": "EXTERNAL",
            "name": "uporto-cd-admin-webapp-http-rule",
            "port_range": "80-80",
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/forwardingRules/uporto-cd-admin-webapp-http-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/targetHttpProxies/uporto-cd-admin-webapp-http-proxy"
          },
          "dependencies": [
            "module.admin.google_compute_address.admin_ip",
            "module.admin.google_compute_backend_service.admin_webapp",
            "module.admin.google_compute_global_address.admin_webapp_ip",
            "module.admin.google_compute_health_check.admin_webapp",
            "module.admin.google_compute_instance.admin",
            "module.admin.google_compute_instance_group.admin_group",
            "module.admin.google_compute_network.admin_vpc",
            "module.admin.google_compute_subnetwork.admin_subnet",
            "module.admin.google_compute_target_http_proxy.admin_webapp",
            "module.admin.google_compute_url_map.admin_webapp",
            "module.admin.google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "module": "module.admin",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "admin_webapp_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/uporto-cd/global/forwardingRules/uporto-cd-admin-webapp-https-rule",
            "ip_address": "34.49.118.53",
            "ip_protocol": "TCP",
            "label_fingerprint": "0ydbSujZ_RM=",
            "labels": {
              "service": "admin-webapp",
              "ssl": "managed"
            },
            "load_balancing_scheme": "EXTERNAL",
            "name": "uporto-cd-admin-webapp-https-rule",
            "port_range": "443-443",
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/forwardingRules/uporto-cd-admin-webapp-https-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/targetHttpsProxies/uporto-cd-admin-webapp-https-proxy"
          },
          "dependencies": [
            "module.admin.google_compute_address.admin_ip",
            "module.admin.google_compute_backend_service.admin_webapp",
            "module.admin.google_compute_global_address.admin_webapp_ip",
            "module.admin.google_compute_health_check.admin_webapp",
            "module.admin.google_compute_instance.admin",
            "module.admin.google_compute_instance_group.admin_group",
            "module.admin.google_compute_managed_ssl_certificate.admin_webapp",
            "module.admin.google_compute_network.admin_vpc",
            "module.admin.google_compute_subnetwork.admin_subnet",
            "module.admin.google_compute_target_https_proxy.admin_webapp",
            "module.admin.google_compute_url_map.admin_webapp",
            "module.admin.google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "module": "module.admin",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20250527",
                    "size": 50,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/uporto-cd/zones/europe-west2-a/disks/uporto-cd-admin"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/uporto-cd/zones/europe-west2-a/instances/uporto-cd-admin",
            "instance_id": "7485620652684822339",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC8d/Bg52qrZqSRqdEeqy0rT1+5f/cP5BnsN5GHNQXP7PHe/0pGqADr6tMTboRwE9+q/6YdjzmnpE3qP1xqruh4gkH5GyvsGSuZofBCJuwumQZt91Oxul6Gu04eO2yj1qf2VXcPKbyvOgkbOqtudNMBwR3iZd18ce6Se03srzu1FVo1tPCItkxdRhNyMWbGaU7TS64P+KTSkqK1hkCxPJNz0gs0C+KabKE4glIO5AlXNoAxXAlNfvq0k27TyfJKRZFduN8blOC5owIlR7iyviWBK2FAKMu2/JW8/hFcjdtL8YN3wNcp0u/7KxgqGkPpW21mGtFdsQV4FfvcogLHjnhO5fMjw4iyBp71ZL73AbUj4+LFFfobPu19zpUOcOCUe+CDpwMnW6s5WfolRk8P6a0arQrA7lYfgV815EugPBlyEi [...]
            },
            "metadata_fingerprint": "hdWfLrXEse8=",
            "name": "uporto-cd-admin",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.230.157.12",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-admin-vpc",
                "network_ip": "10.250.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/uporto-cd/regions/europe-west2/subnetworks/uporto-cd-admin-subnet",
                "subnetwork_project": "uporto-cd"
              }
            ],
            "project": "uporto-cd",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/zones/europe-west2-a/instances/uporto-cd-admin",
            "service_account": [
              {
                "email": "313506890289-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "admin-vm",
              "admin-webapp",
              "uporto-cd-admin"
            ],
            "tags_fingerprint": "5ap9M49H2-0=",
            "zone": "europe-west2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.admin.google_compute_address.admin_ip",
            "module.admin.google_compute_network.admin_vpc",
            "module.admin.google_compute_subnetwork.admin_subnet",
            "module.admin.google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "module": "module.admin",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "admin_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "VPC network for uporto-cd admin",
            "enable_ula_internal_ipv6": false,
            "id": "projects/uporto-cd/global/networks/uporto-cd-admin-vpc",
            "mtu": 0,
            "name": "uporto-cd-admin-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "uporto-cd",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-admin-vpc"
          },
          "dependencies": [
            "module.admin.google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "module": "module.admin",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "admin_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-28T04:54:58.087-07:00",
            "description": "Subnet for uporto-cd admin",
            "gateway_address": "10.250.0.1",
            "id": "projects/uporto-cd/regions/europe-west2/subnetworks/uporto-cd-admin-subnet",
            "ip_cidr_range": "10.250.0.0/24",
            "name": "uporto-cd-admin-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-admin-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "uporto-cd",
            "purpose": "PRIVATE",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/regions/europe-west2/subnetworks/uporto-cd-admin-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.admin.google_compute_network.admin_vpc",
            "module.admin.google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "module": "module.admin",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "admin_webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-28T04:56:53.813-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/uporto-cd/global/targetHttpProxies/uporto-cd-admin-webapp-http-proxy",
            "name": "uporto-cd-admin-webapp-http-proxy",
            "project": "uporto-cd",
            "proxy_bind": false,
            "proxy_id": 6478937579006412010,
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/targetHttpProxies/uporto-cd-admin-webapp-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/urlMaps/uporto-cd-admin-webapp-url-map"
          },
          "dependencies": [
            "module.admin.google_compute_address.admin_ip",
            "module.admin.google_compute_backend_service.admin_webapp",
            "module.admin.google_compute_health_check.admin_webapp",
            "module.admin.google_compute_instance.admin",
            "module.admin.google_compute_instance_group.admin_group",
            "module.admin.google_compute_network.admin_vpc",
            "module.admin.google_compute_subnetwork.admin_subnet",
            "module.admin.google_compute_url_map.admin_webapp",
            "module.admin.google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "module": "module.admin",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "admin_webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-28T04:56:53.823-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/uporto-cd/global/targetHttpsProxies/uporto-cd-admin-webapp-https-proxy",
            "name": "uporto-cd-admin-webapp-https-proxy",
            "project": "uporto-cd",
            "proxy_bind": false,
            "proxy_id": 2864910121989522666,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/targetHttpsProxies/uporto-cd-admin-webapp-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/sslCertificates/uporto-cd-admin-webapp-ssl"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/urlMaps/uporto-cd-admin-webapp-url-map"
          },
          "dependencies": [
            "module.admin.google_compute_address.admin_ip",
            "module.admin.google_compute_backend_service.admin_webapp",
            "module.admin.google_compute_health_check.admin_webapp",
            "module.admin.google_compute_instance.admin",
            "module.admin.google_compute_instance_group.admin_group",
            "module.admin.google_compute_managed_ssl_certificate.admin_webapp",
            "module.admin.google_compute_network.admin_vpc",
            "module.admin.google_compute_subnetwork.admin_subnet",
            "module.admin.google_compute_url_map.admin_webapp",
            "module.admin.google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "module": "module.admin",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "admin_webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-28T04:56:41.143-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/backendServices/uporto-cd-admin-webapp-backend",
            "default_url_redirect": [],
            "description": "URL map for admin webapp",
            "fingerprint": "JVqGgbuJzmk=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/uporto-cd/global/urlMaps/uporto-cd-admin-webapp-url-map",
            "map_id": 4674329472417875734,
            "name": "uporto-cd-admin-webapp-url-map",
            "path_matcher": [],
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/urlMaps/uporto-cd-admin-webapp-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.admin.google_compute_address.admin_ip",
            "module.admin.google_compute_backend_service.admin_webapp",
            "module.admin.google_compute_health_check.admin_webapp",
            "module.admin.google_compute_instance.admin",
            "module.admin.google_compute_instance_group.admin_group",
            "module.admin.google_compute_network.admin_vpc",
            "module.admin.google_compute_subnetwork.admin_subnet",
            "module.admin.google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "module": "module.bastion[\"asia-southeast1\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "bastion_ssh_from_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-28T04:56:27.407-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/uporto-cd/global/firewalls/uporto-cd-bastion-ssh-from-admin-asia-southeast1",
            "log_config": [],
            "name": "uporto-cd-bastion-ssh-from-admin-asia-southeast1",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-asia-southeast1",
            "priority": 1000,
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/firewalls/uporto-cd-bastion-ssh-from-admin-asia-southeast1",
            "source_ranges": [
              "10.250.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "bastion-host"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_firewall.allow_egress_to_admin",
            "module.network.google_compute_firewall.allow_from_admin",
            "module.network.google_compute_firewall.allow_internal",
            "module.network.google_compute_firewall.allow_internet_egress",
            "module.network.google_compute_firewall.block_inter_region",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.bastion[\"asia-southeast1\"]",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20250527",
                    "size": 30,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/uporto-cd/zones/asia-southeast1-a/disks/uporto-cd-bastion-asia-southeast1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/uporto-cd/zones/asia-southeast1-a/instances/uporto-cd-bastion-asia-southeast1",
            "instance_id": "4934901405939615500",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC8d/Bg52qrZqSRqdEeqy0rT1+5f/cP5BnsN5GHNQXP7PHe/0pGqADr6tMTboRwE9+q/6YdjzmnpE3qP1xqruh4gkH5GyvsGSuZofBCJuwumQZt91Oxul6Gu04eO2yj1qf2VXcPKbyvOgkbOqtudNMBwR3iZd18ce6Se03srzu1FVo1tPCItkxdRhNyMWbGaU7TS64P+KTSkqK1hkCxPJNz0gs0C+KabKE4glIO5AlXNoAxXAlNfvq0k27TyfJKRZFduN8blOC5owIlR7iyviWBK2FAKMu2/JW8/hFcjdtL8YN3wNcp0u/7KxgqGkPpW21mGtFdsQV4FfvcogLHjnhO5fMjw4iyBp71ZL73AbUj4+LFFfobPu19zpUOcOCUe+CDpwMnW6s5WfolRk8P6a0arQrA7lYfgV815EugPBlyEi [...]
            },
            "metadata_fingerprint": "zY-Z8AJ9hbY=",
            "metadata_startup_script": "#!/bin/bash\nset -e\n\n# Update system\napt-get update \u0026\u0026 apt-get upgrade -y\n\n# Install Python for Ansible\napt-get install -y python3 python3-pip\n\n# Log completion\necho \"Bastion minimal startup completed at $(date)\" \u003e /var/log/bastion-startup-completed.log\n",
            "name": "uporto-cd-bastion-asia-southeast1",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-asia-southeast1",
                "network_ip": "10.3.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/uporto-cd/regions/asia-southeast1/subnetworks/uporto-cd-subnet-asia-southeast1",
                "subnetwork_project": "uporto-cd"
              }
            ],
            "project": "uporto-cd",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/zones/asia-southeast1-a/instances/uporto-cd-bastion-asia-southeast1",
            "service_account": [
              {
                "email": "313506890289-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastion-host",
              "uporto-cd-bastion-asia-southeast1"
            ],
            "tags_fingerprint": "u2ED9Jms180=",
            "zone": "asia-southeast1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.bastion.google_project_service.compute_api",
            "module.network.google_compute_firewall.allow_egress_to_admin",
            "module.network.google_compute_firewall.allow_from_admin",
            "module.network.google_compute_firewall.allow_internal",
            "module.network.google_compute_firewall.allow_internet_egress",
            "module.network.google_compute_firewall.block_inter_region",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.bastion[\"europe-west2\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "bastion_ssh_from_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-28T04:56:26.977-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/uporto-cd/global/firewalls/uporto-cd-bastion-ssh-from-admin-europe-west2",
            "log_config": [],
            "name": "uporto-cd-bastion-ssh-from-admin-europe-west2",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-europe-west2",
            "priority": 1000,
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/firewalls/uporto-cd-bastion-ssh-from-admin-europe-west2",
            "source_ranges": [
              "10.250.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "bastion-host"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_firewall.allow_egress_to_admin",
            "module.network.google_compute_firewall.allow_from_admin",
            "module.network.google_compute_firewall.allow_internal",
            "module.network.google_compute_firewall.allow_internet_egress",
            "module.network.google_compute_firewall.block_inter_region",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.bastion[\"europe-west2\"]",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20250527",
                    "size": 30,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/uporto-cd/zones/europe-west2-a/disks/uporto-cd-bastion-europe-west2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/uporto-cd/zones/europe-west2-a/instances/uporto-cd-bastion-europe-west2",
            "instance_id": "4065374393417287473",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC8d/Bg52qrZqSRqdEeqy0rT1+5f/cP5BnsN5GHNQXP7PHe/0pGqADr6tMTboRwE9+q/6YdjzmnpE3qP1xqruh4gkH5GyvsGSuZofBCJuwumQZt91Oxul6Gu04eO2yj1qf2VXcPKbyvOgkbOqtudNMBwR3iZd18ce6Se03srzu1FVo1tPCItkxdRhNyMWbGaU7TS64P+KTSkqK1hkCxPJNz0gs0C+KabKE4glIO5AlXNoAxXAlNfvq0k27TyfJKRZFduN8blOC5owIlR7iyviWBK2FAKMu2/JW8/hFcjdtL8YN3wNcp0u/7KxgqGkPpW21mGtFdsQV4FfvcogLHjnhO5fMjw4iyBp71ZL73AbUj4+LFFfobPu19zpUOcOCUe+CDpwMnW6s5WfolRk8P6a0arQrA7lYfgV815EugPBlyEi [...]
            },
            "metadata_fingerprint": "zY-Z8AJ9hbY=",
            "metadata_startup_script": "#!/bin/bash\nset -e\n\n# Update system\napt-get update \u0026\u0026 apt-get upgrade -y\n\n# Install Python for Ansible\napt-get install -y python3 python3-pip\n\n# Log completion\necho \"Bastion minimal startup completed at $(date)\" \u003e /var/log/bastion-startup-completed.log\n",
            "name": "uporto-cd-bastion-europe-west2",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-europe-west2",
                "network_ip": "10.1.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/uporto-cd/regions/europe-west2/subnetworks/uporto-cd-subnet-europe-west2",
                "subnetwork_project": "uporto-cd"
              }
            ],
            "project": "uporto-cd",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/zones/europe-west2-a/instances/uporto-cd-bastion-europe-west2",
            "service_account": [
              {
                "email": "313506890289-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastion-host",
              "uporto-cd-bastion-europe-west2"
            ],
            "tags_fingerprint": "BHjTepHYeLo=",
            "zone": "europe-west2-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.bastion.google_project_service.compute_api",
            "module.network.google_compute_firewall.allow_egress_to_admin",
            "module.network.google_compute_firewall.allow_from_admin",
            "module.network.google_compute_firewall.allow_internal",
            "module.network.google_compute_firewall.allow_internet_egress",
            "module.network.google_compute_firewall.block_inter_region",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.bastion[\"us-south1\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "bastion_ssh_from_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-28T04:56:37.008-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/uporto-cd/global/firewalls/uporto-cd-bastion-ssh-from-admin-us-south1",
            "log_config": [],
            "name": "uporto-cd-bastion-ssh-from-admin-us-south1",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-us-south1",
            "priority": 1000,
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/firewalls/uporto-cd-bastion-ssh-from-admin-us-south1",
            "source_ranges": [
              "10.250.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "bastion-host"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_firewall.allow_egress_to_admin",
            "module.network.google_compute_firewall.allow_from_admin",
            "module.network.google_compute_firewall.allow_internal",
            "module.network.google_compute_firewall.allow_internet_egress",
            "module.network.google_compute_firewall.block_inter_region",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.bastion[\"us-south1\"]",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20250527",
                    "size": 30,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/uporto-cd/zones/us-south1-a/disks/uporto-cd-bastion-us-south1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/uporto-cd/zones/us-south1-a/instances/uporto-cd-bastion-us-south1",
            "instance_id": "7573548314090227518",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQC8d/Bg52qrZqSRqdEeqy0rT1+5f/cP5BnsN5GHNQXP7PHe/0pGqADr6tMTboRwE9+q/6YdjzmnpE3qP1xqruh4gkH5GyvsGSuZofBCJuwumQZt91Oxul6Gu04eO2yj1qf2VXcPKbyvOgkbOqtudNMBwR3iZd18ce6Se03srzu1FVo1tPCItkxdRhNyMWbGaU7TS64P+KTSkqK1hkCxPJNz0gs0C+KabKE4glIO5AlXNoAxXAlNfvq0k27TyfJKRZFduN8blOC5owIlR7iyviWBK2FAKMu2/JW8/hFcjdtL8YN3wNcp0u/7KxgqGkPpW21mGtFdsQV4FfvcogLHjnhO5fMjw4iyBp71ZL73AbUj4+LFFfobPu19zpUOcOCUe+CDpwMnW6s5WfolRk8P6a0arQrA7lYfgV815EugPBlyEi [...]
            },
            "metadata_fingerprint": "zY-Z8AJ9hbY=",
            "metadata_startup_script": "#!/bin/bash\nset -e\n\n# Update system\napt-get update \u0026\u0026 apt-get upgrade -y\n\n# Install Python for Ansible\napt-get install -y python3 python3-pip\n\n# Log completion\necho \"Bastion minimal startup completed at $(date)\" \u003e /var/log/bastion-startup-completed.log\n",
            "name": "uporto-cd-bastion-us-south1",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-us-south1",
                "network_ip": "10.2.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/uporto-cd/regions/us-south1/subnetworks/uporto-cd-subnet-us-south1",
                "subnetwork_project": "uporto-cd"
              }
            ],
            "project": "uporto-cd",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/zones/us-south1-a/instances/uporto-cd-bastion-us-south1",
            "service_account": [
              {
                "email": "313506890289-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastion-host",
              "uporto-cd-bastion-us-south1"
            ],
            "tags_fingerprint": "XF5ijnNQi5o=",
            "zone": "us-south1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "module.bastion.google_project_service.compute_api",
            "module.network.google_compute_firewall.allow_egress_to_admin",
            "module.network.google_compute_firewall.allow_from_admin",
            "module.network.google_compute_firewall.allow_internal",
            "module.network.google_compute_firewall.allow_internet_egress",
            "module.network.google_compute_firewall.block_inter_region",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router",
            "module.network.google_compute_router_nat.nat",
            "module.network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "connection_draining_timeout_sec": 60,
            "creation_timestamp": "2025-05-28T04:54:54.869-07:00",
            "description": "Backend service for streaming servers",
            "enable_cdn": false,
            "fingerprint": "ANSdBkqZR4A=",
            "generated_id": 8556715166217750369,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/healthChecks/uporto-cd-health-check"
            ],
            "id": "projects/uporto-cd/global/backendServices/uporto-cd-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 1
              }
            ],
            "name": "uporto-cd-backend-service",
            "port_name": "http",
            "project": "uporto-cd",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/backendServices/uporto-cd-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 60
          },
          "dependencies": [
            "module.loadbalancer.google_compute_health_check.default"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.54.254.248",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-05-28T04:54:32.233-07:00",
            "description": "Global IP for uporto-cd load balancer",
            "id": "projects/uporto-cd/global/addresses/uporto-cd-global-ip",
            "name": "uporto-cd-global-ip",
            "prefix_length": 0,
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/addresses/uporto-cd-global-ip"
          },
          "dependencies": [
            "module.loadbalancer.google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/uporto-cd/global/forwardingRules/uporto-cd-http-rule",
            "ip_address": "34.54.254.248",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "uporto-cd-http-rule",
            "port_range": "80-80",
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/forwardingRules/uporto-cd-http-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/targetHttpProxies/uporto-cd-http-proxy"
          },
          "dependencies": [
            "module.loadbalancer.google_compute_backend_service.default",
            "module.loadbalancer.google_compute_global_address.lb_ip",
            "module.loadbalancer.google_compute_health_check.default",
            "module.loadbalancer.google_compute_target_http_proxy.default",
            "module.loadbalancer.google_compute_url_map.default",
            "module.loadbalancer.google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/uporto-cd/global/forwardingRules/uporto-cd-https-rule",
            "ip_address": "34.54.254.248",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "uporto-cd-https-rule",
            "port_range": "443-443",
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/forwardingRules/uporto-cd-https-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/targetHttpsProxies/uporto-cd-https-proxy"
          },
          "dependencies": [
            "module.loadbalancer.google_compute_backend_service.default",
            "module.loadbalancer.google_compute_global_address.lb_ip",
            "module.loadbalancer.google_compute_health_check.default",
            "module.loadbalancer.google_compute_managed_ssl_certificate.default",
            "module.loadbalancer.google_compute_target_https_proxy.default",
            "module.loadbalancer.google_compute_url_map.default",
            "module.loadbalancer.google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-28T04:55:39.443-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/uporto-cd/global/targetHttpProxies/uporto-cd-http-proxy",
            "name": "uporto-cd-http-proxy",
            "project": "uporto-cd",
            "proxy_bind": false,
            "proxy_id": 5968605055180031828,
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/targetHttpProxies/uporto-cd-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/urlMaps/uporto-cd-url-map"
          },
          "dependencies": [
            "module.loadbalancer.google_compute_backend_service.default",
            "module.loadbalancer.google_compute_health_check.default",
            "module.loadbalancer.google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-28T04:55:39.962-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/uporto-cd/global/targetHttpsProxies/uporto-cd-https-proxy",
            "name": "uporto-cd-https-proxy",
            "project": "uporto-cd",
            "proxy_bind": false,
            "proxy_id": 6551076755948128084,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/targetHttpsProxies/uporto-cd-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/sslCertificates/uporto-cd-ssl-cert"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/urlMaps/uporto-cd-url-map"
          },
          "dependencies": [
            "module.loadbalancer.google_compute_backend_service.default",
            "module.loadbalancer.google_compute_health_check.default",
            "module.loadbalancer.google_compute_managed_ssl_certificate.default",
            "module.loadbalancer.google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-28T04:55:26.676-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/backendServices/uporto-cd-backend-service",
            "default_url_redirect": [],
            "description": "URL map for uporto-cd with automatic geo-based routing",
            "fingerprint": "QQfb04vNXS0=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/uporto-cd/global/urlMaps/uporto-cd-url-map",
            "map_id": 4944022383172994881,
            "name": "uporto-cd-url-map",
            "path_matcher": [],
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/urlMaps/uporto-cd-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.google_compute_backend_service.default",
            "module.loadbalancer.google_compute_health_check.default"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"asia-southeast1\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_egress_to_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-28T04:55:05.153-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "10.250.0.0/24"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/uporto-cd/global/firewalls/uporto-cd-allow-egress-to-admin-asia-southeast1",
            "log_config": [],
            "name": "uporto-cd-allow-egress-to-admin-asia-southeast1",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-asia-southeast1",
            "priority": 1000,
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/firewalls/uporto-cd-allow-egress-to-admin-asia-southeast1",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"asia-southeast1\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_from_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-05-28T04:55:10.141-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/uporto-cd/global/firewalls/uporto-cd-allow-from-admin-asia-southeast1",
            "log_config": [],
            "name": "uporto-cd-allow-from-admin-asia-southeast1",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-asia-southeast1",
            "priority": 1000,
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/firewalls/uporto-cd-allow-from-admin-asia-southeast1",
            "source_ranges": [
              "10.250.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"asia-southeast1\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-05-28T04:55:42.249-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/uporto-cd/global/firewalls/uporto-cd-allow-internal-asia-southeast1",
            "log_config": [],
            "name": "uporto-cd-allow-internal-asia-southeast1",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-asia-southeast1",
            "priority": 1000,
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/firewalls/uporto-cd-allow-internal-asia-southeast1",
            "source_ranges": [
              "10.3.0.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"asia-southeast1\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internet_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443",
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-28T04:55:18.883-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/uporto-cd/global/firewalls/uporto-cd-allow-internet-egress-asia-southeast1",
            "log_config": [],
            "name": "uporto-cd-allow-internet-egress-asia-southeast1",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-asia-southeast1",
            "priority": 1000,
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/firewalls/uporto-cd-allow-internet-egress-asia-southeast1",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"asia-southeast1\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "block_inter_region",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2025-05-28T04:55:41.308-07:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "",
            "destination_ranges": [
              "10.3.0.0/20"
            ],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/uporto-cd/global/firewalls/uporto-cd-block-inter-region-asia-southeast1",
            "log_config": [],
            "name": "uporto-cd-block-inter-region-asia-southeast1",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-asia-southeast1",
            "priority": 2000,
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/firewalls/uporto-cd-block-inter-region-asia-southeast1",
            "source_ranges": [
              "10.1.0.0/20",
              "10.2.0.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"asia-southeast1\"]",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "VPC network for uporto-cd in asia-southeast1",
            "enable_ula_internal_ipv6": false,
            "id": "projects/uporto-cd/global/networks/uporto-cd-vpc-asia-southeast1",
            "mtu": 0,
            "name": "uporto-cd-vpc-asia-southeast1",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "uporto-cd",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-asia-southeast1"
          }
        }
      ]
    },
    {
      "module": "module.network[\"asia-southeast1\"]",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-28T04:55:24.741-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/uporto-cd/regions/asia-southeast1/routers/uporto-cd-router-asia-southeast1",
            "name": "uporto-cd-router-asia-southeast1",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-asia-southeast1",
            "project": "uporto-cd",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/regions/asia-southeast1/routers/uporto-cd-router-asia-southeast1"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"asia-southeast1\"]",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "uporto-cd/asia-southeast1/uporto-cd-router-asia-southeast1/uporto-cd-nat-asia-southeast1",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "uporto-cd-nat-asia-southeast1",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "uporto-cd",
            "region": "asia-southeast1",
            "router": "uporto-cd-router-asia-southeast1",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"asia-southeast1\"]",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-28T04:55:12.237-07:00",
            "description": "Subnet for uporto-cd in asia-southeast1",
            "gateway_address": "10.3.0.1",
            "id": "projects/uporto-cd/regions/asia-southeast1/subnetworks/uporto-cd-subnet-asia-southeast1",
            "ip_cidr_range": "10.3.0.0/20",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "uporto-cd-subnet-asia-southeast1",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-asia-southeast1",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "uporto-cd",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.203.0.0/16",
                "range_name": "gke-uporto-cd-gke-asia-southeast1-services-ccbdadc5"
              },
              {
                "ip_cidr_range": "10.103.0.0/16",
                "range_name": "gke-uporto-cd-gke-asia-southeast1-pods-ccbdadc5"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/regions/asia-southeast1/subnetworks/uporto-cd-subnet-asia-southeast1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"europe-west2\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_egress_to_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-28T04:55:04.941-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "10.250.0.0/24"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/uporto-cd/global/firewalls/uporto-cd-allow-egress-to-admin-europe-west2",
            "log_config": [],
            "name": "uporto-cd-allow-egress-to-admin-europe-west2",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-europe-west2",
            "priority": 1000,
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/firewalls/uporto-cd-allow-egress-to-admin-europe-west2",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"europe-west2\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_from_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-05-28T04:55:15.455-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/uporto-cd/global/firewalls/uporto-cd-allow-from-admin-europe-west2",
            "log_config": [],
            "name": "uporto-cd-allow-from-admin-europe-west2",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-europe-west2",
            "priority": 1000,
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/firewalls/uporto-cd-allow-from-admin-europe-west2",
            "source_ranges": [
              "10.250.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"europe-west2\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-05-28T04:55:47.748-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/uporto-cd/global/firewalls/uporto-cd-allow-internal-europe-west2",
            "log_config": [],
            "name": "uporto-cd-allow-internal-europe-west2",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-europe-west2",
            "priority": 1000,
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/firewalls/uporto-cd-allow-internal-europe-west2",
            "source_ranges": [
              "10.1.0.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"europe-west2\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internet_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443",
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-28T04:55:13.844-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/uporto-cd/global/firewalls/uporto-cd-allow-internet-egress-europe-west2",
            "log_config": [],
            "name": "uporto-cd-allow-internet-egress-europe-west2",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-europe-west2",
            "priority": 1000,
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/firewalls/uporto-cd-allow-internet-egress-europe-west2",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"europe-west2\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "block_inter_region",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2025-05-28T04:55:41.302-07:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "",
            "destination_ranges": [
              "10.1.0.0/20"
            ],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/uporto-cd/global/firewalls/uporto-cd-block-inter-region-europe-west2",
            "log_config": [],
            "name": "uporto-cd-block-inter-region-europe-west2",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-europe-west2",
            "priority": 2000,
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/firewalls/uporto-cd-block-inter-region-europe-west2",
            "source_ranges": [
              "10.2.0.0/20",
              "10.3.0.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"europe-west2\"]",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "VPC network for uporto-cd in europe-west2",
            "enable_ula_internal_ipv6": false,
            "id": "projects/uporto-cd/global/networks/uporto-cd-vpc-europe-west2",
            "mtu": 0,
            "name": "uporto-cd-vpc-europe-west2",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "uporto-cd",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-europe-west2"
          }
        }
      ]
    },
    {
      "module": "module.network[\"europe-west2\"]",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-28T04:55:23.602-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/uporto-cd/regions/europe-west2/routers/uporto-cd-router-europe-west2",
            "name": "uporto-cd-router-europe-west2",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-europe-west2",
            "project": "uporto-cd",
            "region": "europe-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/regions/europe-west2/routers/uporto-cd-router-europe-west2"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"europe-west2\"]",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "uporto-cd/europe-west2/uporto-cd-router-europe-west2/uporto-cd-nat-europe-west2",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "uporto-cd-nat-europe-west2",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "uporto-cd",
            "region": "europe-west2",
            "router": "uporto-cd-router-europe-west2",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"europe-west2\"]",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-28T04:55:17.915-07:00",
            "description": "Subnet for uporto-cd in europe-west2",
            "gateway_address": "10.1.0.1",
            "id": "projects/uporto-cd/regions/europe-west2/subnetworks/uporto-cd-subnet-europe-west2",
            "ip_cidr_range": "10.1.0.0/20",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "uporto-cd-subnet-europe-west2",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-europe-west2",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "uporto-cd",
            "purpose": "PRIVATE",
            "region": "europe-west2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.101.0.0/16",
                "range_name": "gke-uporto-cd-gke-europe-west2-pods-73fe04d4"
              },
              {
                "ip_cidr_range": "10.201.0.0/16",
                "range_name": "gke-uporto-cd-gke-europe-west2-services-73fe04d4"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/regions/europe-west2/subnetworks/uporto-cd-subnet-europe-west2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"us-south1\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_egress_to_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-28T04:55:05.472-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "10.250.0.0/24"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/uporto-cd/global/firewalls/uporto-cd-allow-egress-to-admin-us-south1",
            "log_config": [],
            "name": "uporto-cd-allow-egress-to-admin-us-south1",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-us-south1",
            "priority": 1000,
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/firewalls/uporto-cd-allow-egress-to-admin-us-south1",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"us-south1\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_from_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-05-28T04:55:11.026-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/uporto-cd/global/firewalls/uporto-cd-allow-from-admin-us-south1",
            "log_config": [],
            "name": "uporto-cd-allow-from-admin-us-south1",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-us-south1",
            "priority": 1000,
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/firewalls/uporto-cd-allow-from-admin-us-south1",
            "source_ranges": [
              "10.250.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"us-south1\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-05-28T04:55:41.309-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/uporto-cd/global/firewalls/uporto-cd-allow-internal-us-south1",
            "log_config": [],
            "name": "uporto-cd-allow-internal-us-south1",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-us-south1",
            "priority": 1000,
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/firewalls/uporto-cd-allow-internal-us-south1",
            "source_ranges": [
              "10.2.0.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"us-south1\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internet_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443",
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-28T04:55:18.095-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/uporto-cd/global/firewalls/uporto-cd-allow-internet-egress-us-south1",
            "log_config": [],
            "name": "uporto-cd-allow-internet-egress-us-south1",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-us-south1",
            "priority": 1000,
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/firewalls/uporto-cd-allow-internet-egress-us-south1",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"us-south1\"]",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "block_inter_region",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2025-05-28T04:55:41.301-07:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "",
            "destination_ranges": [
              "10.2.0.0/20"
            ],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/uporto-cd/global/firewalls/uporto-cd-block-inter-region-us-south1",
            "log_config": [],
            "name": "uporto-cd-block-inter-region-us-south1",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-us-south1",
            "priority": 2000,
            "project": "uporto-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/firewalls/uporto-cd-block-inter-region-us-south1",
            "source_ranges": [
              "10.1.0.0/20",
              "10.3.0.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"us-south1\"]",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "VPC network for uporto-cd in us-south1",
            "enable_ula_internal_ipv6": false,
            "id": "projects/uporto-cd/global/networks/uporto-cd-vpc-us-south1",
            "mtu": 0,
            "name": "uporto-cd-vpc-us-south1",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "uporto-cd",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-us-south1"
          }
        }
      ]
    },
    {
      "module": "module.network[\"us-south1\"]",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-28T04:55:18.282-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/uporto-cd/regions/us-south1/routers/uporto-cd-router-us-south1",
            "name": "uporto-cd-router-us-south1",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-us-south1",
            "project": "uporto-cd",
            "region": "us-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/regions/us-south1/routers/uporto-cd-router-us-south1"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"us-south1\"]",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "uporto-cd/us-south1/uporto-cd-router-us-south1/uporto-cd-nat-us-south1",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "uporto-cd-nat-us-south1",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "uporto-cd",
            "region": "us-south1",
            "router": "uporto-cd-router-us-south1",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router"
          ]
        }
      ]
    },
    {
      "module": "module.network[\"us-south1\"]",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-28T04:55:09.784-07:00",
            "description": "Subnet for uporto-cd in us-south1",
            "gateway_address": "10.2.0.1",
            "id": "projects/uporto-cd/regions/us-south1/subnetworks/uporto-cd-subnet-us-south1",
            "ip_cidr_range": "10.2.0.0/20",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "uporto-cd-subnet-us-south1",
            "network": "https://www.googleapis.com/compute/v1/projects/uporto-cd/global/networks/uporto-cd-vpc-us-south1",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "uporto-cd",
            "purpose": "PRIVATE",
            "region": "us-south1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.102.0.0/16",
                "range_name": "gke-uporto-cd-gke-us-south1-pods-db2261b9"
              },
              {
                "ip_cidr_range": "10.202.0.0/16",
                "range_name": "gke-uporto-cd-gke-us-south1-services-db2261b9"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/uporto-cd/regions/us-south1/subnetworks/uporto-cd-subnet-us-south1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}